src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>pw_ccpro__AddressStatus__c</fullName>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__CountryLookup__c</fullName>
        <label>Country Lookup</label>
        <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__StateLookup__c</fullName>
        <label>State Lookup</label>
        <referenceTo>pw_ccpro__State__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__UtcTimeOffset__c</fullName>
        <formula>IF(AND(MONTH(TODAY()) &gt;=4, MONTH(TODAY()) &lt;=9),

BLANKVALUE(pw_ccpro__ZipCodeLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, BLANKVALUE(pw_ccpro__StateLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, BLANKVALUE(pw_ccpro__CountryLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffsetMidYear__c, NULL))), 

BLANKVALUE(pw_ccpro__ZipCodeLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, BLANKVALUE(pw_ccpro__StateLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, BLANKVALUE(pw_ccpro__CountryLookup__r.pw_ccpro__TimeZone__r.pw_ccpro__UtcOffset__c, NULL)))

)</formula>
        <inlineHelpText>Shows current time zone offset according to related Zip code, State and/or Country values.  Note that due to variations in DST start/end dates there may be variances.</inlineHelpText>
        <label>UTC Time Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_ccpro__ZipCodeLookup__c</fullName>
        <label>Zip/Postal Code Lookup</label>
        <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>